// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chevron is clickable 1`] = `
<Component
  expanded={false}
  itemName="test name"
>
  <ChevronDown
    color="currentColor"
    onClick={[Function]}
    size="24"
  >
    <svg
      fill="none"
      height="24"
      onClick={[Function]}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </ChevronDown>
</Component>
`;

exports[`Chevron is clickable 2`] = `
<Component
  expanded={true}
  itemName="test name"
>
  <ChevronUp
    color="currentColor"
    onClick={[Function]}
    size="24"
  >
    <svg
      fill="none"
      height="24"
      onClick={[Function]}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="18 15 12 9 6 15"
      />
    </svg>
  </ChevronUp>
</Component>
`;
